# MLTracker

./: 404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-CI.yml
data/: db.json
docs/: experiments.md  index.md  iterations.md  metrics.md  models.md  modules.md
experiments/: index.html
iterations/: index.html
metrics/: index.html
mltracker/: accessors.py
mltracker/adapters/default/: models.py
mltracker/adapters/tinydb/: experiments.py  models.py
models/: index.html
modules/: index.html
tests/: test_default.py  test_tinydb.py
