[project]
name = "mltracker"
version = "0.2.1"
description = "A simple tool for tracking machine learning aggregates and storing their data."
authors = [
    {name = "entropy-flux",email = "eric.m.cardozo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
